builder/tests/11-invalid-parameter-type.stderr
error: expected builder attribute to be a list
   |
22 |     #[builder]
   |     ^^^^^^^^^^
